# hackathon-portal

./: .env.example  .env.j2  .gitignore  .gitingore  Makefile  README.md  compose.app.yaml  compose.minio.yaml  compose.postgres.yaml  compose.yaml  discord-config-schema.json  discord-viscon-2025.yaml  docker-compose.yml  renovate.json  stack.env  stack.env.example  upload.py
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  Readme.md  config.toml.example
backend/api/: Cargo.toml  README.md  Readme.md
backend/api/src/: aggregator.rs  api_args.rs  api_config.rs  api_error.rs  api_state.rs  ctx.rs  docs.rs  error.rs  main.rs  models.rs  mw.rs  server.rs  utils.rs
backend/api/src/api/controller/: mod.rs
backend/api/src/auth/: header.rs  jwt.rs  mock.rs  mod.rs  utils.rs
backend/api/src/entity/: mod.rs  project_preference.rs  team.rs  user.rs
backend/api/src/management_routers/: docs.rs  mod.rs
backend/api/src/management_routers/auth/: mod.rs
backend/api/src/management_routers/health/: mod.rs
backend/api/src/management_routers/infrastructure/: mod.rs
backend/api/src/routers/: docs.rs  events.rs  mod.rs
backend/api/src/routers/appointments/: mod.rs  models.rs
backend/api/src/routers/events/: mod.rs  models.rs
backend/api/src/routers/expert_ratings/: mod.rs
backend/api/src/routers/projects/: mod.rs
backend/api/src/routers/ratings/: mod.rs  models.rs
backend/api/src/routers/ratings/expert/: mod.rs
backend/api/src/routers/ratings/public/: mod.rs
backend/api/src/routers/ratings/technical/: mod.rs  models.rs
backend/api/src/routers/sidequest_attempts/: mod.rs  models.rs
backend/api/src/routers/sidequests/: mod.rs  models.rs
backend/api/src/routers/teams/: mod.rs  models.rs
backend/api/src/routers/upload/: mod.rs
backend/api/src/routers/uploads/: mod.rs  models.rs
backend/api/src/routers/users/: mod.rs  models.rs
backend/api/src/workers/: aggregator.rs  mod.rs  upload_validator.rs
backend/api/src/workers/discord/: client.rs  config.rs  mod.rs
backend/cli/: Cargo.toml
backend/cli/src/: cli_config.rs  cli_state.rs  error.rs  main.rs
backend/cli/src/cli/: mod.rs
backend/cli/src/cli/s3/: mod.rs  setup_cors.rs
backend/repositories/: Cargo.toml
backend/repositories/src/: error.rs  lib.rs
backend/repositories/src/db/: appointment.rs  error.rs  event.rs  event_role_assignment.rs  expert_rating.rs  mod.rs  prelude.rs  project.rs  project_preference.rs  sea_orm_active_enums.rs  sidequest.rs  sidequest_attempt.rs  sidequest_score.rs  team.rs  team_role_assignment.rs  upload.rs  user.rs
backend/repositories/src/db/extensions/: mod.rs  or_fail.rs  try_insert_result.rs
backend/repositories/src/db/repositories/: appointment.rs  event.rs  event_role_assignment.rs  event_user.rs  expert_rating.rs  mod.rs  project.rs  project_preference.rs  sidequest.rs  sidequest_attempt.rs  team.rs  team_role_assignment.rs  technical_question.rs  upload.rs  user.rs  vote.rs
backend/repositories/src/discord/: mod.rs
backend/repositories/src/lite_llm/: mod.rs
backend/repositories/src/s3/: mod.rs
backend/services/: Cargo.toml
backend/services/src/: ctx.rs  error.rs  event.rs  lib.rs  logger.rs  utils.rs
backend/services/src/appointment/: mod.rs  model.rs  models.rs
backend/services/src/authorization/: event.rs  groups.rs  mod.rs  model.rs  models.rs  policies.rs  team.rs
backend/services/src/crypto/: mod.rs
backend/services/src/event/: default.rs  error.rs  mod.rs  model.rs  models.rs
backend/services/src/health/: mod.rs
backend/services/src/infrastructure/: mod.rs  models.rs
backend/services/src/project/: matching.rs  mod.rs  models.rs
backend/services/src/rating/: mod.rs  models.rs
backend/services/src/sidequest/: mod.rs  model.rs  models.rs
backend/services/src/team/: mod.rs  model.rs  models.rs
backend/services/src/upload/: mod.rs  models.rs
backend/services/src/user/: error.rs  mod.rs  model.rs  models.rs
backend/src/: appState.rs  config.rs  docs.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/controller/: mod.rs
backend/src/api/controller/event/: mod.rs  routes.rs
backend/src/api/controller/test/: mod.rs  routes.rs
backend/src/api/controller/user/: mod.rs  routes.rs
backend/src/api/schema/: event.rs  user.rs
backend/src/api/service/: event.rs  user.rs
backend/src/entity/: event.rs  event_role_assignment.rs  prelude.rs  project.rs  project_assignment.rs  project_preference.rs  role_assignment.rs  sea_orm_active_enums.rs  sidequest.rs  sidequest_attempt.rs  sidequest_score.rs  team.rs  team_member.rs  team_role_assignment.rs  team_score.rs  timeline_event.rs  user.rs
db/: README.md  schema.prisma
db/init/: 1-schema.sql  1-types.sql  2-tables.sql  3-data.sql
db/migrations/0_init/: migration.sql
db/migrations/20250927095010_sync_v2/: migration.sql
db/migrations/20251002114410_add_discord_integration/: migration.sql
db/migrations/20251006190123_add_team_ingress_and_address_config/: migration.sql
db/migrations/20251007142912_complete_discord_integration/: migration.sql
db/migrations/20251008171252_encryption/: migration.sql
db/migrations/20251009085523_voting_technical_questions/: migration.sql
frontend/: .env.development  .env.production  .eslintignore  .prettierrc  Dockerfile  README.md  kubb.config.ts  orval.config.ts  package-lock.json  package.json
frontend/src/api/: client.ts  schema.json
frontend/src/app/: QueryProvider.tsx  globals.css  layout.tsx  markdown-styles.module.css  page.tsx
frontend/src/componentes/: AppointmentManagement.tsx  CopyButton.tsx  CreateSidequestAttempt.tsx  ErrorNotification.tsx  EventForm.tsx  ProjectAssignment.tsx  ProjectEditor.tsx  ProjectNavigation.tsx  ScoreChart.tsx  SidequestLeaderboard.tsx  SidequestTeamLeaderboard.tsx  Sponsors.tsx  TeamOverview.tsx  TimeSchedule.tsx  TimelineCreate.tsx  TimelineEntry.tsx  TimelineEntryEdit.tsx  UserManagement.tsx
frontend/src/components/: BadgeArray.tsx  BadgeArrayItem.tsx  (+7 more)
src/entity/: appointment.rs  event.rs  mod.rs  project.rs  sea_orm_active_enums.rs  sidequest_attempt.rs  team.rs  user.rs
(+169 files in other folders)
