[workspace]
members = ["api", "cli", "repositories", "services"]

[workspace.dependencies]
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["full"] }
hackathon-portal-repositories = { path = "repositories" }
hackathon-portal-services = { path = "services" }
sea-orm = { version = "1.0.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-json",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1.10.0", features = ["v4"] }
