[workspace]
members = ["api", "cli", "repositories", "services"]

[workspace.dependencies]
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["full"] }
hackathon-portal-repositories = { path = "repositories" }
hackathon-portal-services = { path = "services" }
sea-orm = { version = "1.1.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1.17.0", features = ["v4"] }
