[workspace]
resolver = "2"
members = ["api", "cli", "repositories", "services"]

[workspace.dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
derive_more = { version = "2.0.1", features = ["full"] }
directories = "6.0.0"
dotenvy = "0.15.7"
hackathon-portal-repositories = { path = "repositories" }
hackathon-portal-services = { path = "services" }
itertools = "0.14.0"
mime = "0.3.17"
sea-orm = { version = "1.1.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1.17.0", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
cargo_common_metadata = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }

pedantic = { level = "warn", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
fn_params_excessive_bools = { level = "allow", priority = 1 }

style = { level = "warn", priority = 0 }

perf = { level = "warn", priority = 0 }
large_enum_variant = { level = "allow", priority = 1 }
result_large_err = { level = "allow", priority = 1 }

complexity = { level = "warn", priority = 0 }

suspicious = { level = "warn", priority = 0 }

correctness = { level = "warn", priority = 0 }

restriction = { level = "allow", priority = 0 }
renamed_function_params = { level = "deny", priority = 1 }
unwrap_used = { level = "deny", priority = 1 }
ref_patterns = { level = "warn", priority = 1 }
print_stdout = { level = "warn", priority = 1 }
print_stderr = { level = "warn", priority = 1 }
