[package]
name = "hackathon-portal-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { workspace = true }
chrono-tz = "0.10.0"
clap = { version = "4.5.18", features = ["derive"] }
config = "0.14.0"
derive_more = { workspace = true }
hackathon-portal-repositories = { workspace = true }
hackathon-portal-services = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.128"
serde_with = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["registry", "json", "env-filter"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipauto = "0.1.12"
uuid = { workspace = true }
