[package]
name = "hackathon-portal-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
chrono = { workspace = true }
chrono-tz = "0.10.3"
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
derive_more = { workspace = true }
hackathon-portal-repositories = { workspace = true }
hackathon-portal-services = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.140"
serde_with = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["registry", "json", "env-filter"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipauto = "0.1.14"
uuid = { workspace = true }

[lints]
workspace = true
