[package]
name = "hackathon-portal-api"
version = "1.0.0"
edition = "2021"
default-run = "hackathon-portal-api"

[dependencies]
axum = "0.7.9"
chrono = { workspace = true }
chrono-tz = "0.10.3"
clap = { workspace = true }
config = { workspace = true }
derive_more = { workspace = true }
directories = { workspace = true }
dotenvy = { workspace = true }
hackathon-portal-repositories = { workspace = true }
hackathon-portal-services = { workspace = true }
itertools = { workspace = true }
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
mime = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = "0.9.34"
serenity = "0.12.4"
strum = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = "0.14.0"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipauto = "0.1.14"
uuid = { workspace = true }

[lints]
workspace = true
