[package]
name = "hackathon-portal-cli"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { workspace = true }
config = { workspace = true }
derive_more = { workspace = true }
dialoguer = "0.12.0"
directories = { workspace = true }
dotenvy = { workspace = true }
hackathon-portal-repositories = { workspace = true }
hackathon-portal-services = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
