[package]
name = "hackathon-portal-repositories"
version = "1.0.0"
edition = "2021"

[dependencies]
derive_more = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
slug = "0.1.6"
strum = { workspace = true }
utoipa = { workspace = true }
