[package]
name = "hackathon-portal-repositories"
version = "1.0.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = { version = "1.79.0", features = ["behavior-version-latest"] }
derive_more = { workspace = true }
mime = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
slug = "0.1.6"
strum = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }

[lints]
workspace = true
