[package]
name = "hackathon-portal-repositories"
version = "1.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
aws-sdk-s3 = { version = "1.79.0", features = ["behavior-version-latest"] }
derive_more = { workspace = true }
hex = "0.4.3"
mime = { workspace = true }
reqwest = { version = "0.12.23", features = ["json"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
serde_with = { workspace = true }
slug = "0.1.6"
strum = { workspace = true }
tokio = { workspace = true }
toml = "0.9.7"
utoipa = { workspace = true }

[lints]
workspace = true
