[package]
name = "hackathon-portal-services"
version = "1.0.0"
edition = "2021"

[dependencies]
aws-smithy-types-convert = { version = "0.60.9", features = ["convert-chrono"] }
chrono = { workspace = true }
derive_more = { workspace = true }
directories = { workspace = true }
futures = "0.3.31"
hackathon-portal-repositories = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
minilp = "0.2.2"
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
slug = "0.1.6"
strum = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "registry", "fmt"] }
utoipa = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
